--- a/dataset/QA_generate.ipynb
+++ b/dataset/QA_generate.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "from zhipuai import ZhipuAI\n",
     "\n",
-    "client = ZhipuAI(api_key=\"384102f61aaa4e19bafa1ec76e0288a2.vtLWnZAdigHHvDKu\")\n",
+    "client = ZhipuAI(api_key=\"")\n",
     "\n",
     "    \n",
     "def qa_generator_llm(context: str, client: ZhipuAI, model: str = \"GLM-4-Flash-250414\"):\n",
